# LegalFlow

./: README.md  pyproject.toml  requirements.txt
app/: agent.py  main.py  rag_tools.py  router.py  schemas.py
data/: Nomor_5_Tahun_2020.pdf.txt  PP_Nomor_71_Tahun_2019.pdf.txt  PP_Nomor_80_Tahun_2019.pdf.txt  UU_Nomor_11_Tahun_2008.pdf.txt  UU_Nomor_19_Tahun_2016.pdf.txt  UU_Nomor_1_Tahun_2024.pdf.txt  UU_Nomor_27_Tahun_2022.pdf.txt  UU_Nomor_28_Tahun_2014.pdf.txt
src/: embedding.py  main.py  tes.ipynb
